main : what im reading

--- a/website/index.html
+++ b/website/index.html
@@ -175,28 +175,46 @@
 
     </div>
 
-    <div class="sidebar">
-        <h1>tommy hegarty</h1>
-        <br>
-        <li title="about" class="side-list"><a href="#about" class="rolling-button">
-            <i class="iconoir-home-simple"></i><span>about</span>
-        </a></li>
-        <li class="side-list"><a href="#projects" class="rolling-button">
-            <i class="iconoir-computer"></i><span>projects</span>
-        </a></li>
-        <li class="side-list"><a href="#education" class="rolling-button">
-            <i class="iconoir-graduation-cap"></i><span>education</span>
-        </a></li>
-        <li class="side-list"><a href="#theater" class="rolling-button">
-            <i class="iconoir-cinema-old"></i><span>theater</span>
-        </a></li>
-        <li class="side-list"><a href="#writing" class="rolling-button">
-            <i class="iconoir-design-pencil"></i><span>writing</span>
-        </a></li>
-        <br>
-        <span class="contact">contact me with T. Cromwell facts: thomas.ps.hegarty@gmail.com</span>
+    <div class="sidebar-wrapper">
+        <div class="sidebar">
+            <h1>tommy hegarty</h1>
+            <br>
+            <li title="about" class="side-list"><a href="#about" class="rolling-button">
+                <i class="iconoir-home-simple"></i><span>about</span>
+            </a></li>
+            <li class="side-list"><a href="#projects" class="rolling-button">
+                <i class="iconoir-computer"></i><span>projects</span>
+            </a></li>
+            <li class="side-list"><a href="#education" class="rolling-button">
+                <i class="iconoir-graduation-cap"></i><span>education</span>
+            </a></li>
+            <li class="side-list"><a href="#theater" class="rolling-button">
+                <i class="iconoir-cinema-old"></i><span>theater</span>
+            </a></li>
+            <li class="side-list"><a href="#writing" class="rolling-button">
+                <i class="iconoir-design-pencil"></i><span>writing</span>
+            </a></li>
+            <br>
+            <span class="contact">contact me with T. Cromwell facts: thomas.ps.hegarty@gmail.com</span>
+        </div>
+        <div class="sidebar">
+            <h3>what I've been reading</h3>
+            <br>
+            <li class="reading-list">
+                "Managing Discontent" from Michael Chessum in the <a href="https://www.lrb.co.uk/blog/2025/january/managing-discontent" target="_blank">LRB blog</a>, and "Among Robots" from M.G. Zimeta, also on the <a href="https://www.lrb.co.uk/blog/2025/january/among-robots" target="_blank">LRB blog</a>.
+            </li>
+            <li class="reading-list">
+                <span class="italic">The Two Towers</span>, J.R.R. Tolkien. I like to do a LOTR reread every holiday season.
+            </li>
+            <li class="reading-list">
+                <span class="italic">The Consequences</span>, Manuel Muñoz.
+            </li>
+            <br>
+            <li class="reading-list">
+                <span class="smaller-italic">Pretend that I've also added my textbooks here. I'm certainly reading them, but I'm not necessarily going to recommend others to do the same.</span>
+            </li>
+        </div>
     </div>
-
 </div>
 
 </body>
