--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
         <section class="card"id="about">
             <div class="content">
                 <div class="description">
-                    My name, as you might have already intuited, is Tommy Hegarty. I am a DevOps engineer at MarginEdge, sometime theater maker, casual writer, and aspiring historian. You can find here some examples of my work and details about my ongoing education.   I am currently located in Staunton, Virginia, where I spend my time reading, writing, and talking to my wife and our two cats (usually to the former about the latter).
+                    My name, as you might have already intuited, is Tommy Hegarty. I am a DevOps engineer at MarginEdge, sometime theater maker, casual writer, and aspiring historian. You can find here some examples of my work and details about my ongoing education. I am currently located in Staunton, Virginia, where I spend my time reading, writing, and talking to my wife and our two cats (usually to the former about the latter).
                 </div>
                 <div class="title">
                     <h2>about</h2>
@@ -31,7 +31,7 @@
                     <h2>projects</h2>
                 </div>
                 <div class="description">
-                    A list of my completed and ongoing personal projects can be found here. Much of what I have done is hosted on my GitHub, which is linked on some of the cards attached.
+                    A list of my completed and ongoing personal projects can be found here. Some of what I have done is hosted on my GitHub, which is linked on some of the cards attached.
                     <br><br>
                     <div class="project-cards">
 
@@ -46,7 +46,7 @@
                             <div class="project-card">
                                 <span class="project-title">This website!</span>
                                 <br>
-                                <span class="project-description">A project for myself over the 2024 holiday break, while recovering from illness. A little HTML and CSS learning-while-doing, AWS static webhosting, and voila! This website was made.</span>
+                                <span class="project-description">A project for myself over the 2024 holiday break, while recovering from illness. A little HTML and CSS learning-while-doing, AWS S3, CloudFront, etc., and voila! This website was made.</span>
                             </div>
                         </a>
                         <a class="project-link" target="_blank" rel="noopener" href="https://github.com/tommyhegarty/displomacy">
@@ -153,7 +153,7 @@
                         <div class="project-card">
                             <span class="project-title">Two Thousand Sheep: Thomas Cromwell and Common Wealth</span>
                             <br>
-                            <span class="project-description">A study on Thomas Cromwell's 1534 letter to Henry VIII, in which he loudly praises the Tillage Act of 1533. My contention is that Cromwell's letter and original text of the Act illuminate a new understanding of "common wealth", as an early modern articulation of "the economy".</span>
+                            <span class="project-description">A close reading of Thomas Cromwell's 1534 letter to Henry VIII, in which he praises the Tillage Act of 1533. My contention is that Cromwell's letter and original text of the Act illuminate a new understanding of "common wealth", as an early modern articulation of "the economy".</span>
                         </div>
                         <div class="project-card">
                             <span class="project-title">Untitled Fantasy WIP</span>
@@ -204,7 +204,7 @@
                 "Managing Discontent" from Michael Chessum in the <a href="https://www.lrb.co.uk/blog/2025/january/managing-discontent" target="_blank">LRB blog</a>, and "Among Robots" from M.G. Zimeta, also on the <a href="https://www.lrb.co.uk/blog/2025/january/among-robots" target="_blank">LRB blog</a>.
             </li>
             <li class="reading-list">
-                <span class="italic">The Two Towers</span>, J.R.R. Tolkien. I like to do a LOTR reread every holiday season.
+                <span class="italic">The Return of the King</span>, J.R.R. Tolkien. I like to do a LOTR reread every holiday season.
             </li>
             <li class="reading-list">
                 <span class="italic">The Consequences</span>, Manuel Muñoz.
