main : i hope the characters register right

--- a/website/index.html
+++ b/website/index.html
@@ -209,6 +209,9 @@
             <li class="reading-list">
                 <span class="italic">The Consequences</span>, Manuel Muñoz.
             </li>
+            <li class="reading-list">
+                "Exquisite Americana", from Tom Stevenson. I just really like what they do over at the <a href="https://www.lrb.co.uk/the-paper/v46/n23/tom-stevenson/exquisite-americana" target="_blank">LRB</a>. "If millions dead in Vietnam, Korea and Iraq didn’t bring Britain’s strategic alignment with the US into doubt, why would the second election of Donald Trump?"
+            </li>
             <br>
             <li class="reading-list">
                 <span class="smaller-italic">Pretend that I've also added my textbooks here. I'm certainly reading them, but I'm not necessarily going to recommend others to do the same.</span>
