--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
                 <span class="italic">The Return of the King</span>, J.R.R. Tolkien. I like to do a LOTR reread every holiday season.
             </li>
             <li class="reading-list">
-                <span class="italic">The Consequences</span>, Manuel Mu\ñoz.
+                <span class="italic">The Consequences</span>, Manuel Muñoz.
             </li>
             <li class="reading-list">
                 <span class="italic">The Origin of Capitalism</span>, Ellen Meiksins Wood
             </li>
             <li class="reading-list">
-                "Exquisite Americana", from Tom Stevenson. I just really like what they do over at the <a href="https://www.lrb.co.uk/the-paper/v46/n23/tom-stevenson/exquisite-americana" target="_blank">LRB</a>. "If millions dead in Vietnam, Korea and Iraq didn\’t bring Britain\’s strategic alignment with the US into doubt, why would the second election of Donald Trump?"
+                "Exquisite Americana", from Tom Stevenson. I just really like what they do over at the <a href="https://www.lrb.co.uk/the-paper/v46/n23/tom-stevenson/exquisite-americana" target="_blank">LRB</a>. "If millions dead in Vietnam, Korea and Iraq didn’t bring Britain’s strategic alignment with the US into doubt, why would the second election of Donald Trump?"
             </li>
             <br>
             <li class="reading-list">
