--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
                     A list of my completed and ongoing personal projects can be found here. Some of what I have done is hosted on my GitHub, which is linked on some of the cards attached.
                     <br><br>
                     <div class="project-cards">
-
-                        
                         <div class="project-card">
                             <span class="project-title">Networks of the English Reformation</span>
                             <br>
@@ -73,6 +71,7 @@
                 <div class="description">
                     I completed my undergraduate degrees at the University of Maryland, College Park, but have since continued my career as a student while working full-time as a DevOps Engineer. A list of past and present pursuits is below.
                     <br><br>
+                    <div class="list">
                     <li class="education-list">Unversity of Maryland, College Park</li>
                     <li class="education-list">2015-2019</li>
                     <li class="education-list" style="text-align: right;">B.S., Computer Science</li>
@@ -88,6 +87,7 @@
                     <li class="education-list">Ongoing</li>
                     <li class="education-list" style="text-align: right;">REN-502: Tudor Stuart History</li>
                     <li class="education-list" style="text-align: right;">taken as a Non-Degree Seeking Graduate</li>
+                    </div>
                 </div>
                 <div class="title">
                     <h2>education</h2>
@@ -103,6 +103,7 @@
                 <div class="description">
                     I was fortunate enough to discover a passion for theater when at the University of Maryland. Below you can find an incomplete list of some of my favorite roles on and off stage.
                     <br><br>
+                    <div class="table">
                     <table class="role-table" style="width: 100%;font-size: small;">
                         <tbody>
                             <tr>
@@ -135,6 +136,7 @@
                             </tr>
                         </tbody>
                     </table>
+                    </div>
                 </div>
             </div>
         </section>
