main : review of the origin of capitalism

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <span class="project-description">A rough-drafted project to study the letters of Thomas Cranmer and other English reformers to map a network of contacts among early Anglicanism. This currently consists of collecting what digitized records exist and creating a single dataset to analyze.</span>
                         </div>
                         
-                        <a class="project-link" target="_blank" rel="noopener" href="https://github.com/tommyhegarty/tommyhegarty">
+                        <a class="project-link" target="_blank" rel="noopener" href="https://github.com/tommyhegarty/tommyhegarty.github.io">
                             <div class="project-card">
                                 <span class="project-title">This website!</span>
                                 <br>
@@ -54,7 +54,7 @@
                                 <span class="project-description">An in-progress discord bot, hosted on AWS infrastructure, that maintains games of Diplomacy by receiving commands, and evaluates gamestates. Currently not functional -- it's undergone a number of overhauls! I come back to it whenever I find the time.</span>
                             </div>
                         </a>
-                        <a class="project-link" target="_blank" rel="noopener" href="https://tommyhegarty.github.io">
+                        <a class="project-link" target="_blank" rel="noopener" href="https://github.com/tommyhegarty/iago-the-fool">
                             <div class="project-card">
                                 <span class="project-title">Iago as Intelligent Fool</span>
                                 <br>
@@ -180,23 +180,26 @@
     <div class="sidebar-wrapper">
         <div class="sidebar">
             <h1>tommy hegarty</h1>
-            <br>
-            <li title="about" class="side-list"><a href="#about" class="rolling-button">
-                <i class="iconoir-home-simple"></i><span>about</span>
-            </a></li>
-            <li class="side-list"><a href="#projects" class="rolling-button">
-                <i class="iconoir-computer"></i><span>projects</span>
-            </a></li>
-            <li class="side-list"><a href="#education" class="rolling-button">
-                <i class="iconoir-graduation-cap"></i><span>education</span>
-            </a></li>
-            <li class="side-list"><a href="#theater" class="rolling-button">
-                <i class="iconoir-cinema-old"></i><span>theater</span>
-            </a></li>
-            <li class="side-list"><a href="#writing" class="rolling-button">
-                <i class="iconoir-design-pencil"></i><span>writing</span>
-            </a></li>
-            <br>
+            <div class="link-list">
+                <li title="blog" class="side-list"><a href="reading/index.html#blogging" class="rolling-button">
+                    <i class="iconoir-book"></i><span>blog</span>
+                </a></li>
+                <li title="about" class="side-list"><a href="#about" class="rolling-button">
+                    <i class="iconoir-home-simple"></i><span>about</span>
+                </a></li>
+                <li title="projects" class="side-list"><a href="#projects" class="rolling-button">
+                    <i class="iconoir-computer"></i><span>projects</span>
+                </a></li>
+                <li title="education" class="side-list"><a href="#education" class="rolling-button">
+                    <i class="iconoir-graduation-cap"></i><span>education</span>
+                </a></li>
+                <li title="theater" class="side-list"><a href="#theater" class="rolling-button">
+                    <i class="iconoir-cinema-old"></i><span>theater</span>
+                </a></li>
+                <li title="writing" class="side-list"><a href="#writing" class="rolling-button">
+                    <i class="iconoir-design-pencil"></i><span>writing</span>
+                </a></li>
+            </div>
             <span class="contact">contact me with T. Cromwell facts: thomas.ps.hegarty@gmail.com</span>
         </div>
         <div class="sidebar">
