main : accurate description of my website

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div class="project-card">
                                 <span class="project-title">This website!</span>
                                 <br>
-                                <span class="project-description">A project for myself over the 2024 holiday break, while recovering from illness. A little HTML and CSS learning-while-doing, AWS S3, CloudFront, etc., and voila! This website was made.</span>
+                                <span class="project-description">A project for myself over the 2024 holiday break, while recovering from illness. A little HTML and CSS learning-while-doing, a toe dipped in the JavaScript waters, GitHub pages, CloudFront, etc., and voila! This website was made.</span>
                             </div>
                         </a>
                         <a class="project-link" target="_blank" rel="noopener" href="https://github.com/tommyhegarty/displomacy">
