main : updated reading list

--- a/index.html
+++ b/index.html
@@ -172,16 +172,16 @@
                 "Managing Discontent" from Michael Chessum in the <a href="https://www.lrb.co.uk/blog/2025/january/managing-discontent" target="_blank">LRB blog</a>, and "Among Robots" from M.G. Zimeta, also on the <a href="https://www.lrb.co.uk/blog/2025/january/among-robots" target="_blank">LRB blog</a>.
             </li>
             <li class="reading-list">
-                <span class="italic">The Return of the King</span>, J.R.R. Tolkien. I like to do a LOTR reread every holiday season.
+                <span class="italic">The Anarchy</span>, William Dalrymple.
             </li>
             <li class="reading-list">
                 <span class="italic">The Consequences</span>, Manuel Muñoz.
             </li>
             <li class="reading-list">
-                <span class="italic">The Origin of Capitalism</span>, Ellen Meiksins Wood
+                <span class="italic">Marchants and Revolution</span>, Robert Brenner.
             </li>
             <li class="reading-list">
-                "Exquisite Americana", from Tom Stevenson. I just really like what they do over at the <a href="https://www.lrb.co.uk/the-paper/v46/n23/tom-stevenson/exquisite-americana" target="_blank">LRB</a>. "If millions dead in Vietnam, Korea and Iraq didn’t bring Britain’s strategic alignment with the US into doubt, why would the second election of Donald Trump?"
+                Not a read, but a watch: "Do Not Expect Too Much from the End of the World", directed by Radu Jude.
             </li>
         </div>
     </div>
