main : updated reading

--- a/index.html
+++ b/index.html
@@ -166,19 +166,13 @@
             <h3>what I've been reading</h3>
             <br>
             <li class="reading-list">
-                "Managing Discontent" from Michael Chessum in the <a href="https://www.lrb.co.uk/blog/2025/january/managing-discontent" target="_blank">LRB blog</a>, and "Among Robots" from M.G. Zimeta, also on the <a href="https://www.lrb.co.uk/blog/2025/january/among-robots" target="_blank">LRB blog</a>.
+                "This Is Wrong" from Judith Butler in the <a href="https://www.lrb.co.uk/the-paper/v47/n06/judith-butler/this-is-wrong" target="_blank">LRB blog</a>.
             </li>
             <li class="reading-list">
-                <span class="italic">The Anarchy</span>, William Dalrymple.
+                <span class="italic">Dream of the Read Chamber</span>, 	曹雪芹.
             </li>
             <li class="reading-list">
-                <span class="italic">The Consequences</span>, Manuel Muñoz.
-            </li>
-            <li class="reading-list">
-                <span class="italic">Marchants and Revolution</span>, Robert Brenner.
-            </li>
-            <li class="reading-list">
-                Not a read, but a watch: "Do Not Expect Too Much from the End of the World", directed by Radu Jude.
+                <span class="italic">Postmodernism, or the Cultural Logic of Late Capitalism</span>, Frederic Jameson.
             </li>
         </div>
     </div>
