main : no ongoing

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <td style="text-align: right;"><span class="italic">As You Like It</span>, Mary Baldwin University Shakespeare & Performance</td>
                             </tr>
                             <tr>
-                                <td>Stage Manager, ongoing</td>
+                                <td>Stage Manager</td>
                                 <td style="text-align: right;"><span class="italic">Anima</span> (or <span class="italic">Her Soul</span>), Mary Baldwin University Shakespeare & Performance</td>
                             </tr>
                         </tbody>
@@ -172,7 +172,7 @@
                 <span class="italic">Dream of the Read Chamber</span>, 	曹雪芹.
             </li>
             <li class="reading-list">
-                <span class="italic">Postmodernism, or the Cultural Logic of Late Capitalism</span>, Frederic Jameson.
+                <span class="italic">Postmodernism, or, the Cultural Logic of Late Capitalism</span>, Frederic Jameson.
             </li>
         </div>
     </div>
